--- a/estilos/style.css
+++ b/estilos/style.css
@@ -1,7 +1,119 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap');
+
 * {
     padding: 0;
     margin: 0;
+    border: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+}
+
+html {
+    background: linear-gradient(45deg, #8e2de2, #4a00e0) no-repeat;
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+body {
+    background-color: white;
+    width: 300px;
+    height: 400px;
+    padding: 2rem;
+    box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.202);
+    border-radius: 8px;
+}
+
+h1 {
+    font-weight: 600;
+    margin-bottom: 2rem;
+    position: relative;
+}
+
+h1::before {
+    content: '';
+    position: absolute;
+    height: 4px;
+    width: 33px;
+    bottom: 3px;
+    left: 0;
+    border-radius: 8px;
+    background: linear-gradient(45deg, #8e2de2, #4a00e0) no-repeat;
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+main input {
+    outline: none;
+    font-size: 0.9rem;
+    color: rgba(0, 0, 0, 0.7);
+}
+
+main input::placeholder {
+    color: rgba(0, 0, 0, 0.502)
+}
+
+form input[type="submit"] {
+    width: 100%;
+    margin-top: 2rem;
+    padding: 0.4rem;
+    background: linear-gradient(to left, #4776e6, #8e54e9);
+    color: white;
+    font-size: 0.9rem;
+    font-weight: 300;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3 ease;
+}
+
+form input[type="submit"]:hover {
+    letter-spacing: 0.5px;
+    background:  #693dae;
+}
+
+footer >  p {
+    display: flex;
+    flex-direction: column;
+    margin-top: 1rem;
+}
+
+.texto {
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 0.9rem;
+    text-align: center;
+}
+
+.social {
+    font-size: 0.85rem;
+    cursor: pointer;
+    width: 100%;
+}
+
+.social a {
+    text-decoration: none;
+    color: white;
+}
+
+#twitter {
+    background: linear-gradient(to right, #56a7f2, #468aca);
+    padding: 0.4rem;
+    border-radius: 4px;
+}
+
+#facebook {
+    background: linear-gradient(to right, #1e3c72, #2a5298);
+    padding: 0.4rem;
+    border-radius: 4px;
+}
+
+footer a i {
+    margin: 0 0.5rem;
+    width: 15px;
 }
