--- a/estilos/style.css
+++ b/estilos/style.css
@@ -121,3 +121,29 @@ footer a i {
     margin: 0 0.5rem;
     width: 15px;
 }
+
+@media screen and (min-width: 768px) {
+    body {
+        width: 400px;
+        height: 450px;
+    }
+
+    main input {
+        width: 100%;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    body {
+        width: 500px;
+        height: 460px;
+    }
+
+    main input {
+        width: 100%;
+    }
+
+    footer >  p {
+        margin-top: 1.5rem;
+    }
+}
